[tool.poetry]
name = "awsglue-local"
version = "3.0.0"
description = "Build Python interfaces to the AWS Glue ETL library for use as a local dependency."
authors = ["Ryan Eloff <kevin.truong.ds@gmail.com>"]
packages = [
    { include = "awsglue" },
]
license = "Amazon Software License 1.0"
readme = "awsglue/README.md"
repository = "https://github.com/kevintruong/aws-glue-libs"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
